knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_UCC_Filings__c/Corporate_Entity_UCC_Filings__c.object-meta.xml
<CustomObject>
    <label>Corporate Entity - UCC Filings</label>
    <nameField>
        <displayFormat>CE(A)-{000000}</displayFormat>
        <label>Filing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate Entity - UCC Filings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>