knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_UCC_Filings__c/fields/Add_Secured_Party__c.field-meta.xml
<CustomField>
    <fullName>Add_Secured_Party__c</fullName>
    <label>Add. Secured Party</label>
    <length>55</length>
    <type>Text</type>
</CustomField>