knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_UCC_Filings__c/fields/Amend_Date__c.field-meta.xml
<CustomField>
    <fullName>Amend_Date__c</fullName>
    <label>Amend Date</label>
    <type>Date</type>
</CustomField>