knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_UCC_Filings__c/fields/Corporate_Entity__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Entity__c</fullName>
    <label>Account (Corporate Entity)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Corporate_Entity_UCC_Filings_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>