knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_UCC_Filings__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UCC-1</fullName>
            </value>
            <value>
                <fullName>UCC-3 amendment</fullName>
            </value>
            <value>
                <fullName>UCC-3 continuation</fullName>
            </value>
            <value>
                <fullName>UCC-3 assignment</fullName>
            </value>
            <value>
                <fullName>UCC-3 termination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>