knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_UCC_Filings__c/fields/Filing_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Filing_Jurisdiction__c</fullName>
    <label>Filing Jurisdiction</label>
    <length>55</length>
    <type>Text</type>
</CustomField>