knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_UCC_Filings__c/fields/Filing_Party__c.field-meta.xml
<CustomField>
    <fullName>Filing_Party__c</fullName>
    <label>Filing Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GE Capital</fullName>
            </value>
            <value>
                <fullName>Ares</fullName>
            </value>
            <value>
                <fullName>SG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>