knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Corporate_Entity_UCC_Filings__c/recordTypes/Corporate_Entity_UCC_Filings_Detail.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Entity_UCC_Filings_Detail</fullName>
    <active>true</active>
    <label>Corporate Entity-UCC Filings Detail</label>
</RecordType>